# smaFS

./: Design and Implementation of smaFS.docx  LICENSE  README.rst  smaFS - proposal v2.docx
src/: .gitignore  CREDITS  Makefile  MakefileDebug  common.h  dd.sh  demo-stage.sh  dummy.txt  fsck.cpp  metadata.cpp  metadata.h  mount-debug.sh  mount.sh  reaper.cpp  reaper.h  restart.c  smaFS.c  smaFS.h  translate.c  translate.h  versions.cpp  versions.h
src/hashlib/: Makefile  blake28_light.c  blake64_light.c  hashlib.c  hashlib.h  hashlib_blake.c
src/tests/Ransomware/: CyaSSL_howto.txt  Makefile  README.TXT  RSA_howto.txt  RansomWare.c  enc_message.txt  mysrm.c  private.pem  rsa1024.der
src/tests/Ransomware/Chacha20/: Makefile  chacha.c  ecrypt-sync.h  encrypt.c
src/tests/Ransomware/cyassl/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  cyassl.sln  cyassl.vcproj  libtool
src/tests/Ransomware/cyassl/ctaocrypt/: Makefile  Makefile.in  ctaocrypt.vcproj
src/tests/Ransomware/cyassl/ctaocrypt/benchmark/: Makefile  Makefile.in  benchmark.c
src/tests/Ransomware/cyassl/ctaocrypt/benchmark/.deps/: benchmark.Po
src/tests/Ransomware/cyassl/ctaocrypt/include/: aes.h  asn.h  coding.h  config.h  config.h.in  des3.h  error.h  integer.h  md5.h  misc.h  rsa.h  tfm.h  types.h
src/tests/Ransomware/cyassl/ctaocrypt/src/: Makefile  Makefile.am  Makefile.in  aes.c  asm.c  asn.c  coding.c  des3.c  dsa.c  integer.c  md4.c  md5.c  misc.c  rabbit.c  random.c  rsa.c  tfm.c
src/tests/Ransomware/cyassl/ctaocrypt/test/: Makefile  Makefile.am  Makefile.in  test.c
src/tests/Ransomware/cyassl/ctaocrypt/test/.deps/: test.Po
src/tests/Ransomware/cyassl/cyassl-iphone.xcodeproj/: project.pbxproj
src/tests/Ransomware/cyassl/examples/: Makefile  Makefile.in  test.h
src/tests/Ransomware/cyassl/examples/client/: Makefile  Makefile.in  client.c  client.vcproj
src/tests/Ransomware/cyassl/examples/echoclient/: Makefile  Makefile.in  echoclient.c  echoclient.vcproj
src/tests/Ransomware/cyassl/examples/echoserver/: Makefile  Makefile.in  echoserver.c  echoserver.vcproj
src/tests/Ransomware/cyassl/examples/server/: Makefile  Makefile.in  server.c  server.vcproj
src/tests/Ransomware/cyassl/include/: cyassl_error.h  cyassl_int.h
src/tests/Ransomware/cyassl/include/openssl/: evp.h  opensslv.h  rand.h  ssl.h
src/tests/Ransomware/cyassl/src/: Makefile  Makefile.am  Makefile.in  aes.lo  arc4.lo  asn.lo  coding.lo  cyassl_int.c  cyassl_int.lo  cyassl_io.c  cyassl_io.lo  des3.lo  dh.lo  dsa.lo  hc128.lo  hmac.lo  integer.lo  keys.c  keys.lo  libcyassl.la  md4.lo  md5.lo  rabbit.lo  rsa.lo  sha.lo  sha256.lo  ssl.c  ssl.lo  tls.c  tls.lo
src/tests/Ransomware/cyassl/src/.deps/: asn.Plo  coding.Plo  cyassl_int.Plo  cyassl_io.Plo  des3.Plo  dsa.Plo  hc128.Plo  hmac.Plo  integer.Plo  keys.Plo  md4.Plo  md5.Plo  rabbit.Plo  random.Plo  rsa.Plo  sha.Plo  sha256.Plo  ssl.Plo  tls.Plo
src/tests/Ransomware/cyassl/src/.libs/: libcyassl.lai
src/tests/Ransomware/cyassl/testsuite/: Makefile  Makefile.in  testsuite.c  testsuite.vcproj
src/tests/Ransomware/fspy-0.1.1/: LICENSE  Makefile  README  fspy
src/tests/Ransomware/fspy-0.1.1/src/: adaptive.c  adaptive.h  diff.c  diff.h  enumdirs.c  enumdirs.h  fsevents.c  fsevents.h  fspy.c  fspy.h  isnumber.c  isnumber.h  numlen.c  numlen.h  output.c  output.h  regmatch.c  regmatch.h  stating.c  stating.h
src/ziplib/: Makefile  portab.h  ziplib.c  ziplib.h
